--- a/src/components/SignUpPage.css
+++ b/src/components/SignUpPage.css
@@ -1,39 +1,109 @@
-  .close-btn {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: transparent;
-    border: none;
-    font-size: 1.5rem;
-    cursor: pointer;
-  }
-  
-  .sign-up-form label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-  }
-  
-  .sign-up-form input {
-    width: 90%;
-    padding: 8px;
-    margin-bottom: 15px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: medium;
-  }
-  
-  .submit-btn {
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-right: 10px;
-  }
-  
-  .submit-btn:hover {
-    background-color: #0056b3;
-  }
-  
+/* Close button styling */
+.close-btn {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background: transparent;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+/* Wrapper for the image */
+.img-wrapper {
+  display: flex;
+  justify-content: center; 
+  align-items: center;    
+  margin: 0 auto;         
+}
+
+/* Image styling */
+.signup-img {
+  width: 100%; /* Make image full width */
+  max-width: 300px; /* Limit max width for responsiveness */
+  height: auto; /* Keep aspect ratio */
+}
+
+/* Styling for the form */
+.sign-up-form {
+  padding-top: 10px;
+  width: 100%; /* Ensure the form takes up full width */
+}
+
+.sign-up-form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.sign-up-form input {
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%; /* Make the inputs take up full width */
+  outline: none;
+  font-size: 1.06rem;
+  border-radius: 30px;
+  border: 1px solid lightgray;
+  padding: 0 1.25rem 0 3.12rem;
+  transition: 0.2s;
+}
+
+input:focus {
+  border: 2px solid #FFCB59;
+}
+
+i {
+  position: absolute;
+  top: 50%;
+  left: 0.9rem;
+  pointer-events: none;
+  transform: translateY(-50%);
+  transition: 0.2s ease;
+}
+
+/* Wrapper for inputs to ensure full width */
+.input-container {
+  margin-bottom: 10px;
+}
+
+.input-wrapper {
+  height: 50px;
+  width: 100%;
+  position: relative;
+}
+
+/* Submit button */
+.submit-btn {
+  background-color: #FFCB59;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 20px;
+  cursor: pointer;
+  width: 100%; /* Full width */
+}
+
+.submit-btn:hover, .forget-btn:hover {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.2s ease-in-out;
+  transform: scale(1.05);
+}
+
+/* Account buttons container */
+.account-btns {
+  display: flex;
+  padding-top: 20px;
+  margin-bottom: 10px;
+  gap: 10px;
+  width: 100%; /* Ensure this section is full width */
+}
+
+/* Forget password button styling */
+.forget-btn {
+  background-color: white;
+  color: #FFCB59;
+  border: 1px solid #FFCB59;
+  padding: 10px 15px;
+  border-radius: 20px;
+  cursor: pointer;
+  width: 100%; /* Full width */
+}
