--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,3 +1,7 @@
+* {
+  font-family: "Poppins", sans-serif;
+}
+
 .material-symbols-rounded {
   font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
   transition: transform 0.3s ease-in-out; /* Smooth hover animation */
@@ -79,13 +83,13 @@ button {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.DineInBtn, .DeliveryBtn, .PickupBtn {
+.DineInBtn, .DeliveryBtn, .PickupBtn, .pay-btn {
   display: inline-block;
   background-color: #FFCB59;
   margin: 0 10px 6px 0; /* Adjust margins to align buttons */
 }
 
-.DineInBtn:hover, .DeliveryBtn:hover, .PickupBtn:hover {
+.DineInBtn:hover, .DeliveryBtn:hover, .PickupBtn:hover, .pay-btn:hover {
   background-color: #F2BF50;
   transition: background-color 0.2s ease-in-out;
   transform: scale(1.05);
