--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,15 @@
 * {
   font-family: "Poppins", sans-serif;
 }
+
 body {
   background-color: #FFFAF7;
   padding: 10px;
-  font-family: "Averia Serif Libre", serif;
   max-height: 1000px;
+}
+
+h2 {
+  margin-bottom: 0px;
 }
 
 .App {
@@ -13,6 +17,14 @@ body {
   align-items: center;
   justify-content: center;
   padding: 20px;
+}
+
+.logo {
+  background-image: url("./img/logo.png");
+  background-size: cover;
+  width: 200px;
+  height: 35px;
+  background-repeat: no-repeat;
 }
 
 .right-icons {
@@ -24,6 +36,25 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+/* Advertisements */
+
+.ads {
+  display: flex; 
+  overflow-x: auto; 
+  gap: 10px; 
+  white-space: nowrap; 
+  scroll-behavior: smooth; 
+  max-width: 500px;
+}
+
+.ads img {
+  width: 100%;
+  max-width: 500px;
+  height: auto;
+  border-radius: 10px;
+  flex: 0 0 auto;
 }
 
 /* Header Icon Styling */
@@ -38,20 +69,15 @@ header {
   transform: scale(1.1); /* Slightly enlarge on hover */
 }
 
-.mealplanner-icon {
-  width: 24px; /* Adjust size as needed */
-  height: 24px; /* Adjust size as needed */
-  cursor: pointer;
-  margin-left: 10px; /* Adjust spacing as needed */
-}
-
 .cafeteria-list {
   padding-top: 10px;
   cursor: pointer;
 }
 
-.steps {
-  color: #FFCB59;
+.cafeteria-list h3 {
+  margin-bottom: 0px;
+  padding-top: 15px;
+  border-top: 1px solid #959595;
 }
 
 .cafeteria-option {
@@ -85,7 +111,6 @@ header {
   background-color: #ffffff;
   box-shadow: 0 5px 6px rgba(0, 0, 0, 0.1);
   margin-top: 15px;
-  margin-right: 1.1rem;
 }
 
 .cafeteria-item:hover {
