--- a/src/styles.css
+++ b/src/styles.css
@@ -22,8 +22,8 @@ h2 {
 .logo {
   background-image: url("./img/logo.png");
   background-size: cover;
-  width: 200px;
-  height: 35px;
+  width: 25rem;
+  height: 4.1rem;
   background-repeat: no-repeat;
 }
 
@@ -48,6 +48,7 @@ header {
   scroll-behavior: smooth; 
   /* max-width: 500px; */
   width: 100%;
+  height: 14rem;
 }
 
 .ads img {
@@ -113,6 +114,7 @@ header {
   background-color: #ffffff;
   box-shadow: 0 5px 6px rgba(0, 0, 0, 0.1);
   margin-top: 15px;
+  margin-right: 15px;
 }
 
 .cafeteria-item:hover {
