--- a/src/components/Checkout.css
+++ b/src/components/Checkout.css
@@ -109,3 +109,16 @@
     }
   }
   
+  /*TNG QR code*/
+  .qr-code-container {
+    display: grid;
+    place-items: center;
+    width: 100%;
+    height: 300px;
+  }
+
+  .qr-code-container img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain;
+  }
