--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -32,7 +32,7 @@
   width: 500px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   position: relative;
-  height: 90%;
+  height: fit-content;
   max-height: 650px;
 }
 
