--- a/src/styles.css
+++ b/src/styles.css
@@ -87,6 +87,12 @@ header {
   flex: 0 0 auto;
 }
 
+main h3 {
+  margin-bottom: 0px;
+  padding-top: 15px;
+  border-top: 1px solid #FFCB59;
+}
+
 /* Header Icon Styling */
 .material-symbols-rounded {
   font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
@@ -102,12 +108,6 @@ header {
 
 .cafeteria-list {
   padding-top: 10px;
-}
-
-.cafeteria-list h3 {
-  margin-bottom: 0px;
-  padding-top: 15px;
-  border-top: 1px solid #959595;
 }
 
 .cafeteria-option {
