--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -49,6 +49,19 @@
 
 }
 
+
+/* Overlay Header */
+
+.subcontent {
+  height: 550px;
+  max-height: 550px;
+  width: 100%;
+  max-width: 100%;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+  scrollbar-width: none;
+}
+
 /* Lists styling */
 ul {
   list-style-type: none;
@@ -71,24 +84,42 @@ li {
 button {
   transition: transform 0.3s ease-in-out;
   padding: 6px 15px;
-  background-color: #FFCB59;
   color: #fff;
   border: none;
   cursor: pointer;
-  font-size: 14px;
-  border-radius: 5px; 
+  border-radius: 5px;
+  font-size: smaller; 
+}
+
+.btn-group {
+  display: flex;
+  padding-top: 10px;
+  margin-bottom: 10px;
+  gap: 10px;
+  width: 100%;
+  margin: 0 10px 6px 0; 
+}
+
+.pay-btn {
+  width: 100%;
+}
+
+.DineInBtn.no {
+  background-color: #e0e0e0;
+  width: 100%;
+  cursor: default;
 }
 
 .DineInBtn, .DeliveryBtn, .PickupBtn, .pay-btn {
-  display: inline-block;
   background-color: #FFCB59;
-  margin: 0 10px 6px 0; /* Adjust margins to align buttons */
+  width: 100%
 }
 
-.DineInBtn:hover, .DeliveryBtn:hover, .PickupBtn:hover, .pay-btn:hover {
+.DineInBtn.yes:hover, .DeliveryBtn:hover, .PickupBtn:hover, .pay-btn:hover {
   background-color: #F2BF50;
   transition: background-color 0.2s ease-in-out;
   transform: scale(1.05);
+  cursor: pointer;
 }
 
 .reserve-btn {
@@ -114,7 +145,8 @@ button {
   cursor: pointer;
 }
 
-/* Book Table Styling */
+/* Payments */
+
 .table-input, .num-ppl-input {
   margin-left: 3%;
   margin-bottom: 2%;
@@ -132,20 +164,6 @@ p {
   font-size: 13px;
 }
 
-.reservation-section h2 {
-  border-top: 1px solid #959595;
-  padding-top: 20px;
-}
-
-.reservation-section h2, .total-price {
-  border-top: 1px solid #959595;
-  padding-top: 10px;
-}
-
-.total-price h4 {
-  margin-top: 10px;
-  margin-bottom: 10px;
-}
 
 /* Comment section */
 .comment-form {
