--- a/src/styles.css
+++ b/src/styles.css
@@ -8,10 +8,15 @@ body {
   max-height: 1000px;
 }
 
+
 .header-h3 {
   margin-bottom: 0px;
   padding-top: 15px;
   border-top: 1px solid #959595;
+}
+h2 {
+  margin-bottom: 0px;
+
 }
 
 .App {
@@ -83,12 +88,6 @@ header {
   flex: 0 0 auto;
 }
 
-main h3 {
-  margin-bottom: 0px;
-  padding-top: 15px;
-  border-top: 1px solid #FFCB59;
-}
-
 /* Header Icon Styling */
 .material-symbols-rounded {
   font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
@@ -104,6 +103,13 @@ main h3 {
 
 .cafeteria-list {
   padding-top: 10px;
+  cursor: pointer;
+}
+
+.cafeteria-list h3 {
+  margin-bottom: 0px;
+  padding-top: 15px;
+  border-top: 1px solid #959595;
 }
 
 .cafeteria-option {
@@ -137,6 +143,7 @@ main h3 {
   background-color: #ffffff;
   box-shadow: 0 5px 6px rgba(0, 0, 0, 0.1);
   margin-top: 15px;
+  margin-right: 15px;
 }
 
 .cafeteria-item:hover {
