--- a/src/components/Checkout.css
+++ b/src/components/Checkout.css
@@ -28,7 +28,7 @@
     color: #333;
   }
   
-  .subcontent h3 {
+  .subcontent h3, .reservation-section h3 {
     color: #333;
     border-bottom: 1px solid #333;
     padding-bottom: 10px;
