--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -34,7 +34,6 @@
   height: fit-content;
   max-height: 650px;
   animation: fadeIn 0.2s ease-in-out;
-  overflow-y: auto;
 }
 
 
@@ -52,16 +51,17 @@
 }
 
 
-/* Overlay Header */
+/* Overlay ((Actual!!) Content */
 
 .subcontent {
-  height: 550px;
+  height: auto;
   max-height: 550px;
   width: 100%;
   max-width: 100%;
   overflow-y: auto;
   scroll-behavior: smooth;
-  scrollbar-width: none;
+  scrollbar-width: thin;
+  scrollbar-color: #e0e0e0;
 }
 
 /* Lists styling */
@@ -91,6 +91,7 @@ button {
   cursor: pointer;
   border-radius: 5px;
   font-size: smaller; 
+  width: 100%;
 }
 
 .btn-group {
@@ -151,7 +152,7 @@ button {
 
 /* Payments */
 
-.table-input, .num-ppl-input, #pickup-date, #pickup-time {
+.table-input, .num-ppl-input, #pickup-date, #pickup-time, .select {
   margin-left: 3%;
   margin-bottom: 2%;
   cursor: pointer;
@@ -160,6 +161,39 @@ button {
   border: 1px solid #959595;
   background-color: white;
   padding: 5px;
+}
+
+/* Style for the select dropdown on focus */
+.table-input:focus, .num-ppl-input:focus, #pickup-date:focus, #pickup-time:focus, .select:focus {
+  outline: none;
+  border-color: #FFCB59;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+/* Hover effect for the select */
+.table-input:hover, .num-ppl-input:hover, #pickup-date:hover, #pickup-time:hover, .select:hover {
+  border-color: #FFCB59;
+  transition: border-color 0.2s ease-in-out;
+  transform: scale(1.05);
+}
+
+/* Style when option is selected */
+.select option:checked {
+  color: white;
+}
+
+/* Style for the select dropdown when it's open */
+.select:active {
+  border-color: #a4a4a4;
+  box-shadow: 0 0 8px rgba(228, 228, 228, 0.5);
+}
+
+/* Style for the select dropdown when it's disabled */
+.select:disabled, .select:disabled:hover {
+  background-color: #f1f1f1;
+  color: #aaa;
+  border-color: #ddd;
+  cursor: not-allowed;
 }
 
 p {
