--- a/src/styles.css
+++ b/src/styles.css
@@ -143,9 +143,7 @@ header {
   padding: 10px;
   background-color: #ffffff;
   box-shadow: 0 5px 6px rgba(0, 0, 0, 0.1);
-  margin-top: 15px;
-  margin-right: 15px;
-}
+  margin-top: 15px;}
 
 .cafeteria-item:hover {
   transform: translateY(-5px);
