--- a/src/components/DeliveryPopUp.css
+++ b/src/components/DeliveryPopUp.css
@@ -68,8 +68,9 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-.delivery-button:hover {
+.delivery-button-container:hover {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: background-color 0.2s ease-in-out;
     transform: scale(1.05);
+    cursor: pointer;
 }
