--- a/src/styles.css
+++ b/src/styles.css
@@ -60,37 +60,6 @@ body {
   margin: 0 auto;
   align-items: center;
   justify-content: center;
-  padding: 20px;
-}
-
-
-.App {
-  margin: 0 auto;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
-
-
-.App {
-  margin: 0 auto;
-  align-items: center;
-  justify-content: center;
-}
-
-
-.App {
-  margin: 0 auto;
-  align-items: center;
-  justify-content: center;
-  padding: 20px;
-}
-
-
-.App {
-  margin: 0 auto;
-  align-items: center;
-  justify-content: center;
 }
 
 /* Base styles for the logo */
@@ -109,6 +78,13 @@ body {
   background-position: center;
   background-size: cover;
   position: relative;
+}
+
+.LandingPageContent {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  width: 100%;
 }
 
 /* Responsive styles for smaller screens */
@@ -154,11 +130,10 @@ body {
   font-size: larger;
   border-radius: 40px;
   padding: 8px;
-  vertical-align: center;
+  align-items: center;
   display: flex;
   justify-content: center;
   gap: 10px;
-  text-align: center;
 }
 
 .get-started:hover {
@@ -202,12 +177,6 @@ header {
   flex: 0 0 auto;
 }
 
-main h3 {
-  margin-bottom: 0px;
-  padding-top: 15px;
-  border-top: 1px solid #FFCB59;
-}
-
 /* Header Icon Styling */
 .material-symbols-rounded {
   font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
@@ -221,15 +190,11 @@ main h3 {
   transform: scale(1.1); /* Slightly enlarge on hover */
 }
 
-.cafeteria-list {
-  padding-top: 10px;
-}
-
 .cafeteria-option {
   cursor: pointer;
   display: flex;
   flex-wrap: wrap;
-  justify-content: left;
+  justify-content: center;
   align-items: center;
   list-style-type: none;
   gap: 10px;
